--- a/KD-infoAppVer01/public/login.html
+++ b/KD-infoAppVer01/public/login.html
@@ -1,3 +1,3 @@
-# ログインフォームのコンポーネント
+<!-- ログインフォームのコンポーネント -->
 
-# 柏木君は作成中のHTMLファイルのソースをここにコピペし、このコメントを削除してください!
+<!-- 柏木君は作成中のHTMLファイルのソースをここにコピペし、このコメントを削除してください! -->
