--- a/KD-infoAppVer01/public/profile.html
+++ b/KD-infoAppVer01/public/profile.html
@@ -1,1 +1,12 @@
 <!-- ユーザーのプロフィールの編集用ページ(優先度低) -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  プロフィールページ
+</body>
+</html>
