--- a/KD-infoAppVer01/public/profile.html
+++ b/KD-infoAppVer01/public/profile.html
@@ -1,12 +1,15 @@
 <!-- ユーザーのプロフィールの編集用ページ(優先度低) -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
+
 <body>
-  プロフィールページじゃあ
+    プロフィールページじゃあfug
 </body>
+
 </html>
