--- a/KD-infoAppVer01/public/kasiwagi/password.html
+++ b/KD-infoAppVer01/public/kasiwagi/password.html
@@ -34,10 +34,16 @@
             box-sizing: border-box;
         }
 
+        h1 {
+            text-align: center;
+            /* テキストを中央に揃える */
+        }
+
         button {
             background-color: #007BFF;
             color: white;
             cursor: pointer;
+            text-align: center;
         }
 
         button:hover {
