--- a/KD-infoAppVer01/public/kawando/home.html
+++ b/KD-infoAppVer01/public/kawando/home.html
@@ -3,97 +3,26 @@
 
 <head>
     <meta charset="UTF-8">
+    <!-- 表示を可変にする -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>タブを分ける</title>
-    <style>
-        /* タブのスタイル */
-        .tab {
-            overflow: hidden;
-            /* オーバーフローを隠す */
-            border: 1px solid #ccc;
-            /* 枠線を追加 */
-            background-color: #f1f1f1;
-            /* 背景色を設定 */
-        }
-
-        /* タブボタンのスタイル */
-        .tab button {
-            background-color: inherit;
-            /* 背景色を親要素に継承 */
-            float: left;
-            /* 左寄せ */
-            border: none;
-            /* ボーダーなし */
-            outline: none;
-            /* アウトラインなし */
-            cursor: pointer;
-            /* カーソルをポインターに変更 */
-            padding: 14px 16px;
-            /* パディングを設定 */
-            transition: 0.3s;
-            /* トランジション効果を追加 */
-        }
-
-        /* タブコンテンツのスタイル */
-        .tabcontent {
-            display: none;
-            /* コンテンツを非表示 */
-            padding: 6px 12px;
-            /* パディングを設定 */
-            border: 1px solid #ccc;
-            /* 枠線を追加 */
-            border-top: none;
-            /* 上部のボーダーを削除 */
-        }
-    </style>
+    <title>Home</title>
+    <!-- CSSを読み込み -->
+    <link rel="stylesheet" href="home.css">
 </head>
 
 <body>
-
-    <!-- タブボタン -->
-    <div class="tab">
-        <button class="tablinks" onclick="openTab(event, 'Tab1')">タブ 1</button>
-        <button class="tablinks" onclick="openTab(event, 'Tab2')">タブ 2</button>
-        <button class="tablinks" onclick="openTab(event, 'Tab3')">タブ 3</button>
+    <div class="tabArea">
+        <input type="radio" name="tab_name" id="question" checked>
+        <label class="tab_class" for="question">Q&A</label>
+        <div class="content_class">
+            <p>Q&Aを表示します</p>
+        </div>
+        <input type="radio" name="tab_name" id="post">
+        <label class="tab_class" for="post">投稿</label>
+        <div class="content_class">
+            <p>投稿を表示します</p>
+        </div>
     </div>
-
-    <!-- タブコンテンツ -->
-    <div id="Tab1" class="tabcontent">
-        <h3>タブ 1 コンテンツ</h3>
-        <p>タブ 1 の内容をここに記述します。</p>
-    </div>
-
-    <div id="Tab2" class="tabcontent">
-        <h3>タブ 2 コンテンツ</h3>
-        <p>タブ 2 の内容をここに記述します。</p>
-    </div>
-
-    <div id="Tab3" class="tabcontent">
-        <h3>タブ 3 コンテンツ</h3>
-        <p>タブ 3 の内容をここに記述します。</p>
-    </div>
-
-    <script>
-        function openTab(evt, tabName) {
-            var i, tabcontent, tablinks;
-
-            // タブコンテンツを非表示にする
-            tabcontent = document.getElementsByClassName("tabcontent");
-            for (i = 0; i < tabcontent.length; i++) {
-                tabcontent[i].style.display = "none";
-            }
-
-            // タブボタンの色を変更する
-            tablinks = document.getElementsByClassName("tablinks");
-            for (i = 0; i < tablinks.length; i++) {
-                tablinks[i].className = tablinks[i].className.replace(" active", "");
-            }
-
-            // 選択されたタブコンテンツを表示し、ボタンの色を変更する
-            document.getElementById(tabName).style.display = "block";
-            evt.currentTarget.className += " active";
-        }
-    </script>
 
 </body>
 
