個人用開発フォルダ整理

--- a/KD-infoAppVer01/development/koma/QA.html
+++ b/KD-infoAppVer01/development/koma/QA.html
@@ -56,6 +56,7 @@
 <body>
 
 <div class="container">
+  <!-- 質問ハードコーディング -->
   <div class="question">
     <div class="question-title">eclipse4.8.0の動けるプロジェクトにおる、WEB-INF/libにあるjarがweb appライブラリに表示されません。</div>
     <div class="question-meta">@kamakura1996 - Q&A - 回答数0 - <span class="question-date">2024年4月19日</span></div>
@@ -64,10 +65,9 @@
       <li>Eclipse</li>
     </ul>
   </div>
-  <!-- 他の質問も同様に追加... -->
   <!-- 質問1 -->
   <div class="question">
-    <div class="question-title">python jupter　ValueError: cannot set a row with mismatched columns</div>
+    <div class="question-title">python jupter ValueError: cannot set a row with mismatched columns</div>
     <div class="question-meta">@Tiger140304 - Q&A - 回答件数1 - <span class="question-date">2024年4月19日</span></div>
     <ul class="question-tags">
       <li>Python</li>
@@ -173,7 +173,7 @@
   </ul>
 </div>
 
-  
+
 </div>
 
 </body>
