--- a/KD-infoAppVer01/public/login.html
+++ b/KD-infoAppVer01/public/login.html
@@ -60,7 +60,7 @@
 
     <script>
         function redirectToHome() {
-            window.location.href = "home.html";
+            window.location.href = "PostingHome.html";
         }
     </script>
 </body>
