--- a/KD-infoAppVer01/public/QuestionHome.html
+++ b/KD-infoAppVer01/public/QuestionHome.html
@@ -4,13 +4,154 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Q&A Platform</title>
-<link rel="stylesheet" href="..\static\css\QuestionHome.css">
-
+<style>
+body {
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f2f2f2;
+}
+#newQuestionBtn {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  padding: 10px 20px;
+  cursor: pointer;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+}
+.container {
+  max-width: 600px;
+  margin: 40px auto;
+  background-color: #fff;
+  padding: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+.question {
+  border-bottom: 1px solid #ddd;
+  padding: 16px 0;
+  position: relative;
+}
+.question:not(:last-child) {
+  border-bottom: 1px solid #eee;
+}
+.question h3 {
+  font-size: 1rem;
+  color: #333;
+  margin: 0 0 8px 0;
+  font-weight: bold;
+}
+.question p {
+  font-size: 0.9rem;
+  color: #666;
+  margin-bottom: 4px;
+}
+.modal {
+  display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  align-items: center;
+  justify-content: center;
+}
+.modal-content {
+  width: 70%;
+  max-width: 600px;
+  max-height: 90vh;
+  overflow-y: auto;
+  background: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+.close {
+  position:absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  font-size: 1.5rem;
+  color: #666;
+}
+.question-form {
+  display: flex;
+  flex-direction: column;
+}
+.question-form input, .question-form textarea, .question-form button {
+  margin: 10px 0;
+  padding: 10px;
+}
+.question-form textarea {
+  height: 41vh;
+  resize: vertical;
+}
+.question-meta, .question-tags {
+  color: #999;
+  font-size: 0.85rem;
+  list-style: none;
+  padding-left: 0;
+}
+.question-tags li {
+  display: inline;
+  margin-right: 5px;
+}
+.reply-form textarea {
+  width: 100%;
+  margin-top: 8px;
+}
+.replies, .sub-replies {
+  margin-top: 10px;
+}
+.sub-reply-form {
+  display: none;
+}
+.reply, .sub-reply {
+  margin-bottom: 10px;
+  padding-left: 20px;
+  border-left: 1px solid #ddd;
+}
+.delete-btn {
+  cursor: pointer;
+  color: white;
+  background-color: red;
+  border: none;
+  position:absolute;
+  top: 10px;
+  right: 10px;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+}
+.delete-reply-btn {
+  cursor: pointer;
+  color: white;
+  background-color: red;
+  border: none;
+  position: absolute;
+  left: 0;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+}
+</style>
 </head>
 <body>
 
 <div class="container" id="questionsList">
-  <!-- Pre-existing hardcoded questions are displayed here -->
   <!-- Example of a hardcoded question -->
   <div class="question">
     <div class="question-title">Example Question Title</div>
@@ -19,19 +160,32 @@
       <li>Tag1</li>
       <li>Tag2</li>
     </ul>
+    <button class="reply-btn">返信する</button>
+    <div class="reply-form" style="display:none;">
+      <textarea placeholder="返信を入力"></textarea>
+      <button type="button" class="send-reply-btn">返信を送信</button>
+    </div>
+    <div class="replies"></div>
+    <button class="delete-btn" title="質問を削除">&#10006;</button>
   </div>
-  <!-- Place other hardcoded questions similarly -->
+
   <div class="question">
     <div class="question-title">WordPressをウェブページ制作会社が採用する理由</div>
-    <div class="question-meta">@Yut-Ishih - 意見交換 - 回答件数2 - <span class="question-date">2024年4月18日</span></div>
+    <div class="question-meta">@Yut-Ishih - 意見交換 - 回答件数2 - <span class="question-date">2024年4月19日</span></div>
     <ul class="question-tags">
       <li>HTML</li>
       <li>WordPress</li>
       <li>Web</li>
     </ul>
+    <button class="reply-btn">返信する</button>
+    <div class="reply-form" style="display:none;">
+      <textarea placeholder="返信を入力"></textarea>
+      <button type="button" class="send-reply-btn">返信を送信</button>
+    </div>
+    <div class="replies"></div>
+    <button class="delete-btn" title="質問を削除">&#10006;</button>
   </div>
 
-  <!-- 質問1 -->
   <div class="question">
     <div class="question-title">python jupter ValueError: cannot set a row with mismatched columns</div>
     <div class="question-meta">@Tiger140304 - Q&A - 回答件数1 - <span class="question-date">2024年4月19日</span></div>
@@ -40,35 +194,34 @@
       <li>error</li>
       <li>Jupyter</li>
     </ul>
+    <button class="reply-btn">返信する</button>
+    <div class="reply-form" style="display:none;">
+      <textarea placeholder="返信を入力"></textarea>
+      <button type="button" class="send-reply-btn">返信を送信</button>
+    </div>
+    <div class="replies"></div>
+    <button class="delete-btn" title="質問を削除">&#10006;</button>
   </div>
 
-  <!-- 質問2 -->
-  <div class="question">
-    <div class="question-title">CalendarViewライブラリでカレンダーを表示したいが、設定でコンパイルエラーが起きている</div>
-    <div class="question-meta">@egao_ - Q&A - 回答件数0 - <span class="question-date">2024年4月18日</span></div>
-    <ul class="question-tags">
-      <li>Android</li>
-      <li>Kotlin</li>
-      <li>AndroidStudio</li>
-      <li>android開発</li>
-      <li>JetpackCompose</li>
-    </ul>
-  </div>
-
-  <!-- 質問3 -->
   <div class="question">
     <div class="question-title">Arduino「IRremote.hpp」ライブラリを使用してラジコンを動かしたい</div>
-    <div class="question-meta">@yoshi_arduino - Q&A - 回答件数2 - <span class="question-date">2024年4月18日</span></div>
+    <div class="question-meta">@yoshi_arduino - Q&A - 回答件数2 - <span class="question-date">2024年4月19日</span></div>
     <ul class="question-tags">
       <li>Arduino</li>
       <li>初心者</li>
     </ul>
+    <button class="reply-btn">返信する</button>
+    <div class="reply-form" style="display:none;">
+      <textarea placeholder="返信を入力"></textarea>
+      <button type="button" class="send-reply-btn">返信を送信</button>
+    </div>
+    <div class="replies"></div>
+    <button class="delete-btn" title="質問を削除">&#10006;</button>
   </div>
 
-  <!-- 質問4 -->
   <div class="question">
     <div class="question-title">mglearn.plots.plot_kmeans_faces()関数で真っ黒の画像しか表示されない</div>
-    <div class="question-meta">@sharp-shinig-iland - Q&A - 回答件数0 - <span class="question-date">2024年4月18日</span></div>
+    <div class="question-meta">@sharp-shinig-iland - Q&A - 回答件数0 - <span class="question-date">2024年4月19日</span></div>
     <ul class="question-tags">
       <li>Python</li>
       <li>機械学習</li>
@@ -76,69 +229,46 @@
       <li>K-means</li>
       <li>mglearn</li>
     </ul>
+    <button class="reply-btn">返信する</button>
+    <div class="reply-form" style="display:none;">
+      <textarea placeholder="返信を入力"></textarea>
+      <button type="button" class="send-reply-btn">返信を送信</button>
+    </div>
+    <div class="replies"></div>
+    <button class="delete-btn" title="質問を削除">&#10006;</button>
   </div>
 
-  <!-- 質問5 -->
-  <div class="question">
-    <div class="question-title">eclipse4.8.0の動けるプロジェクトにおる、WEB-INF/libにあるjarがweb appライブラリに表示されません。</div>
-    <div class="question-meta">@kamakura1996 - Q&A - 回答数0 - <span class="question-date">2024年4月19日</span></div>
-    <ul class="question-tags">
-      <li>Java</li>
-      <li>Eclipse</li>
-    </ul>
-  </div>
-
-  <!-- 質問6 -->
-  <div class="question">
-    <div class="question-title">LDAP検索が著しく遅くなる</div>
-    <div class="question-meta">@TEISHOTOKU-P(低所得 -P) - Q&A - 回答件数0 - <span class="question-date">2024年4月18日</span></div>
-    <ul class="question-tags">
-      <li>ActiveDirectory</li>
-    </ul>
-  </div>
-
-  <!-- 質問7 -->
   <div class="question">
     <div class="question-title">Python SeleniumでWebページをスクロールしたい。</div>
-    <div class="question-meta">@yuni_ - Q&A - 回答件数1 - <span class="question-date">2024年4月18日</span></div>
+    <div class="question-meta">@yuni_ - Q&A - 回答件数1 - <span class="question-date">2024年4月19日</span></div>
     <ul class="question-tags">
       <li>Python</li>
       <li>Selenium</li>
     </ul>
+    <button class="reply-btn">返信する</button>
+    <div class="reply-form" style="display:none;">
+      <textarea placeholder="返信を入力"></textarea>
+      <button type="button" class="send-reply-btn">返信を送信</button>
+    </div>
+    <div class="replies"></div>
+    <button class="delete-btn" title="質問を削除">&#10006;</button>
   </div>
 
-  <!-- 質問8 -->
   <div class="question">
-    <div class="question-title">Webスクレイピングでエラーが出て困っています</div>
-    <div class="question-meta">@ken100 - Q&A - 回答件数1 - <span class="question-date">2024年4月18日</span></div>
+    <div class="question-title">LDAP検索が著しく遅くなる</div>
+    <div class="question-meta">@TEISHOTOKU-P(低所得 -P) - Q&A - 回答件数0 -<span class="question-date">2024年4月19日</span></div>
     <ul class="question-tags">
-      <li>Python</li>
-      <li>WebScraping</li>
+      <li>ActiveDirectory</li>
     </ul>
+    <button class="reply-btn">返信する</button>
+    <div class="reply-form" style="display:none;">
+      <textarea placeholder="返信を入力"></textarea>
+      <button type="button" class="send-reply-btn">返信を送信</button>
+    </div>
+    <div class="replies"></div>
+    <button class="delete-btn" title="質問を削除">&#10006;</button>
   </div>
-
-  <!-- 質問9 -->
-  <div class="question">
-    <div class="question-title">ios/androidのロック画面デザインを変更するアプリ開発</div>
-    <div class="question-meta">@dwr0218(dwr 0218) - Q&A - 回答件数0 - <span class="question-date">2024年4月18日</span></div>
-    <ul class="question-tags">
-      <li>Android</li>
-      <li>iOS</li>
-      <li>Flutter</li>
-    </ul>
-  </div>
-
-  <!-- 質問10 -->
-  <div class="question">
-    <div class="question-title">PowerApps ボタンのonselect で他のボタンの .Text を変更したい。</div>
-    <div class="question-meta">@mura23go(Smbc 村上) - Q&A - 回答件数1 - <span class="question-date">2024年4月18日</span></div>
-    <ul class="question-tags">
-      <li>解決方法</li>
-      <li>PowerApps</li>
-      <li>解決したい</li>
-    </ul>
-  </div>
-</div>
+  <!-- More hardcoded questions can be added here in a similar format -->
 
 <button id="newQuestionBtn">新規作成</button>
 
@@ -151,10 +281,111 @@
       <input type="text" id="questionTags" placeholder="タグ（カンマ区切り）" />
       <button type="submit">投稿</button>
     </form>
-  </div>
 </div>
 
-<script src="..\static\js\QuestionHome.js"></script>
+<script>
+document.addEventListener('DOMContentLoaded', function () {
+  const modal = document.getElementById('questionModal');
+  const btn = document.getElementById('newQuestionBtn');
+  const span = document.getElementsByClassName('close')[0];
+
+  btn.onclick = function() {
+    modal.style.display = 'flex';
+  };
+  span.onclick = function() {
+    modal.style.display = 'none';
+  };
+  window.onclick = function(event) {
+    if (event.target === modal) {
+      modal.style.display = 'none';
+    }
+  };
+
+  document.getElementById('questionForm').onsubmit = function(event) {
+    event.preventDefault();
+    const title = document.getElementById('questionTitle').value;
+    const body = document.getElementById('questionBody').value;
+    const tags = document.getElementById('questionTags').value.split(',').map(tag => tag.trim()).filter(tag => tag !== '');
+
+    const div = document.createElement('div');
+    div.className = 'question';
+    div.innerHTML = `
+      <div class="question-title">${title}</div>
+      <div class="question-meta">@user - Q&A - 回答数0 - <span class="question-date">2024年4月19日</span></div>
+      <ul class="question-tags">
+        ${tags.map(tag => `<li>${tag}</li>`).join('')}
+      </ul>
+      <button class="reply-btn">返信する</button>
+      <div class="reply-form" style="display:none;">
+        <textarea placeholder="返信を入力"></textarea>
+        <button type="button" class="send-reply-btn">返信を送信</button>
+      </div>
+      <div class="replies"></div>
+      <button class="delete-btn" title="質問を削除">&#10006;</button>
+    `;
+    const questionList = document.getElementById('questionsList');
+    questionList.insertBefore(div, questionList.firstChild);
+
+    modal.style.display = 'none';
+    document.getElementById('questionTitle').value = '';
+    document.getElementById('questionBody').value = '';
+    document.getElementById('questionTags').value = '';
+  };
+
+  document.getElementById('questionsList').addEventListener('click', function(event) {
+    if (event.target.className === 'reply-btn') {
+      const replyForm = event.target.nextElementSibling;
+      replyForm.style.display = 'block';
+    } else if (event.target.className === 'send-reply-btn') {
+      const replyText = event.target.previousElementSibling.value;
+      const repliesDiv = event.target.parentElement.nextElementSibling;
+      const replyDiv = document.createElement('div');
+      replyDiv.className = 'reply';
+      replyDiv.innerHTML = `
+        <button class="delete-reply-btn" title="返信を削除">&#10006;</button>
+        <p>${replyText}</p>
+        <button class="sub-reply-btn">返信する</button>
+        <div class="sub-reply-form" style="display:none;">
+          <textarea placeholder="さらに返信を入力"></textarea>
+          <button type="button" class="send-sub-reply-btn">返信を送信</button>
+        </div>
+        <div class="sub-replies"></div>
+      `;
+      repliesDiv.appendChild(replyDiv);
+      event.target.previousElementSibling.value = '';  // Clear the textarea after sending
+      event.target.parentElement.style.display = 'none';  // Hide the reply form after sending
+    } else if (event.target.className === 'sub-reply-btn') {
+      const subReplyForm = event.target.nextElementSibling;
+      subReplyForm.style.display = 'block';
+    } else if (event.target.className === 'send-sub-reply-btn') {
+      const subReplyText = event.target.previousElementSibling.value;
+      const subRepliesDiv = event.target.parentElement.nextElementSibling;
+      appendSubReply(subRepliesDiv, subReplyText);
+      event.target.previousElementSibling.value = '';  // Clear the textarea after sending
+      event.target.parentElement.style.display = 'none';  // Hide the sub-reply form after sending
+    } else if (event.target.className === 'delete-btn' || event.target.className === 'delete-reply-btn') {
+      const questionOrReply = event.target.parentElement;
+      questionOrReply.remove();  // Remove the question or reply from the list
+    }
+  });
+
+  function appendSubReply(container, text) {
+    const subReplyDiv = document.createElement('div');
+    subReplyDiv.className = 'sub-reply';
+    subReplyDiv.innerHTML = `
+      <button class="delete-reply-btn" title="返信の返信を削除">&#10006;</button>
+      <p>${text}</p>
+      <button class="sub-reply-btn">返信する</button>
+      <div class="sub-reply-form" style="display:none;">
+        <textarea placeholder="さらに返信を入力"></textarea>
+        <button type="button" class="send-sub-reply-btn">返信を送信</button>
+      </div>
+      <div class="sub-replies"></div>
+    `;
+    container.appendChild(subReplyDiv);
+  }
+});
+</script>
 
 </body>
 </html>
