--- a/KD-infoAppVer01/development/kasiwagi/test.html
+++ b/KD-infoAppVer01/development/kasiwagi/test.html
@@ -3,91 +3,64 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IT分野情報共有サイト</title>
     <style>
         body {
-
-            text-align: center;
-            /* テキストを中央に配置 */
-            height: 100vh;
-            /* 画面の高さに合わせる */
             margin: 0;
-            /* マージンをリセット */
             padding: 0;
-            /* パディングをリセット */
-            position: relative;
-            /* 相対位置指定 */
-        }
-
-
-        .background-image {
-            position: absolute;
-            /* 絶対位置指定 */
-            bottom: 10;
-            /* 下端に配置 */
-            right: 2;
-            /* 右端に配置 */
-
-            z-index: -1;
-            /* テキストやボタンの下に配置 */
-        }
-
-        .content {
             display: flex;
-            /* Flexboxを使用 */
-            flex-direction: column;
-            /* 縦方向に要素を配置 */
-            align-items: center;
-            /* 中央寄せ */
             justify-content: center;
-            /* 縦方向の中央寄せ */
-            height: 100%;
-            /* コンテンツの高さを100%に設定 */
+            align-items: center;
+            height: 100vh;
+            background-color: #f0f0f0;
         }
 
-        h1 {
-            font-size: 65 px;
-            /* フォントサイズを65pxに設定 */
+        .container {
+            text-align: center;
+        }
+
+        .title {
+            font-size: 60px;
             position: absolute;
-            /* 絶対位置指定 */
             top: 35%;
-            /* 上端を中央に */
             left: 50%;
-            /* 左端を中央に */
             transform: translate(-50%, -50%);
-            /* 中央揃え */
+            font-weight: bold;
+            margin-bottom: 20px;
         }
 
-        .button-container {
-            margin-top: 200px;
-            /* タイトルからの距離を200pxに設定 */
-        }
-
-        button {
-            margin-top: 40px;
-            /* 上側のマージンを40pxに設定 */
-            padding: 15px 30px;
-            /* 上下左右のパディングを追加 */
+        .button {
+            padding: 10px 20px;
             font-size: 18px;
-            /* フォントサイズを18pxに設定 */
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            margin: 5px;
         }
     </style>
 </head>
 
 <body>
+    <div class="container">
+        <div class="title">IT分野情報共有サイト</div>
+        <button class="button" onclick="redirectToHome()">ログイン</button>
 
-    <div class="content">
-        <h1>プログラミング情報共有サイト</h1>
-        <div class="button-container">
-            <button onclick="moveToHome()">学生としてgoogleで認証</button>
-            <button onclick="moveToHome()">教員としてログインする</button>
+        <button class="button" onclick="redirectToSignUp()">アカウント新規作成</button>
+    </div>
 
-            <script>
-                function moveToHome() {
-                    window.location.href = "home.html";
-                }
-            </script>
+    <script>
+        function redirectToHome() {
+            window.location.href = "home.html";
+        }
 
+        function redirectToSignUp() {
+            window.location.href = "signup.html";
+        }
+    </script>
 </body>
+
 
 </html>
