--- a/KD-infoAppVer01/public/pages/Login.html
+++ b/KD-infoAppVer01/public/pages/Login.html
@@ -1,6 +1,3 @@
-<!-- ログイン画面 -->
-<!-- 最終編集者：柏木 -->
-
 <!DOCTYPE html>
 <html lang="ja">
 
@@ -25,15 +22,6 @@
 
         .title {
             font-size: 60px;
-            /* フォントサイズを65pxに設定 */
-            position: absolute;
-            /* 絶対位置指定 */
-            top: 35%;
-            /* 上端を中央に */
-            left: 50%;
-            /* 左端を中央に */
-            transform: translate(-50%, -50%);
-            /* 中央揃え */
             font-weight: bold;
             margin-bottom: 20px;
         }
@@ -48,22 +36,123 @@
             cursor: pointer;
             margin: 5px;
         }
+
+        /* モーダルスタイル */
+        .modal {
+            display: none;
+            /* デフォルトでは非表示 */
+            position: fixed;
+            /* 画面固定 */
+            z-index: 1;
+            /* モーダルを最前面に */
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            /* モーダルのサイズを超えた場合はスクロール */
+            background-color: rgba(0, 0, 0, 0.4);
+            /* 背景を半透明に */
+        }
+
+        .modal-content {
+            background-color: #fefefe;
+            margin: 10% auto;
+            /* 画面中央に配置 */
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            border-radius: 5px;
+            position: relative;
+        }
+
+        /* モーダル内の閉じるボタン */
+        .close {
+            color: #aaa;
+            position: absolute;
+            right: 10px;
+            top: 5px;
+            font-size: 28px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+
+        /* モーダル内の入力フォームスタイル */
+        .input-field {
+            margin: 10px 0;
+            text-align: left;
+        }
+
+        .input-field label {
+            display: block;
+            margin-bottom: 5px;
+        }
+
+        .input-field input {
+            width: 100%;
+            padding: 8px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+        }
     </style>
 </head>
 
 <body>
     <div class="container">
         <div class="title">IT分野情報共有サイト</div>
-        <button class="button" onclick="redirectToHome()">Googleでログイン</button>
-        <button class="button" onclick="redirectToHome()">教員としてログイン</button>
+        <button class="button" onclick="openModal('loginModal')">ログイン</button>
+        <a href="signup.html" class="button">アカウント新規作成</a>
+    </div>
+
+    <!-- ログインモーダル -->
+    <div id="loginModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('loginModal')">&times;</span>
+            <div class="input-field">
+                <label for="username">名前:</label>
+                <input type="text" id="username">
+            </div>
+            <div class="input-field">
+                <label for="email">メールアドレス:</label>
+                <input type="email" id="email">
+            </div>
+            <div class="input-field">
+                <label for="password">パスワード:</label>
+                <input type="password" id="password">
+            </div>
+            <button class="button" onclick="redirectToHome()">ログイン</button>
+        </div>
     </div>
 
     <script>
+        // モーダルを開く関数
+        function openModal(modalId) {
+            var modal = document.getElementById(modalId);
+            modal.style.display = "block";
+        }
+
+        // モーダルを閉じる関数
+        function closeModal(modalId) {
+            var modal = document.getElementById(modalId);
+            modal.style.display = "none";
+        }
+
+        // モーダル外のクリックで閉じる
+        window.onclick = function (event) {
+            var modals = document.getElementsByClassName('modal');
+            for (var i = 0; i < modals.length; i++) {
+                var modal = modals[i];
+                if (event.target == modal) {
+                    modal.style.display = "none";
+                }
+            }
+        }
+
+        // ログイン画面に遷移する関数
         function redirectToHome() {
-            window.location.href = "../PostingHome.html";
+            window.location.href = "../PostingHome.html"; // 修正された部分
         }
     </script>
 </body>
-
 
 </html>
