ボタン配置

--- a/KD-infoAppVer01/public/QuestionHome.html
+++ b/KD-infoAppVer01/public/QuestionHome.html
@@ -13,6 +13,18 @@
       background-color: #f2f2f2;
     }
 
+    .logout-btn {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      padding: 10px 20px;
+      cursor: pointer;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      border-radius: 5px;
+    }
+
     #newQuestionBtn {
       position: fixed;
       right: 20px;
