--- a/KD-infoAppVer01/public/pages/Login.html
+++ b/KD-infoAppVer01/public/pages/Login.html
@@ -37,28 +37,21 @@
             margin: 5px;
         }
 
-        /* モーダルスタイル */
         .modal {
             display: none;
-            /* デフォルトでは非表示 */
             position: fixed;
-            /* 画面固定 */
             z-index: 1;
-            /* モーダルを最前面に */
             left: 0;
             top: 0;
             width: 100%;
             height: 100%;
             overflow: auto;
-            /* モーダルのサイズを超えた場合はスクロール */
             background-color: rgba(0, 0, 0, 0.4);
-            /* 背景を半透明に */
         }
 
         .modal-content {
             background-color: #fefefe;
             margin: 10% auto;
-            /* 画面中央に配置 */
             padding: 20px;
             border: 1px solid #888;
             width: 80%;
@@ -66,7 +59,6 @@
             position: relative;
         }
 
-        /* モーダル内の閉じるボタン */
         .close {
             color: #aaa;
             position: absolute;
@@ -77,7 +69,6 @@
             cursor: pointer;
         }
 
-        /* モーダル内の入力フォームスタイル */
         .input-field {
             margin: 10px 0;
             text-align: left;
@@ -125,19 +116,16 @@
     </div>
 
     <script>
-        // モーダルを開く関数
         function openModal(modalId) {
             var modal = document.getElementById(modalId);
             modal.style.display = "block";
         }
 
-        // モーダルを閉じる関数
         function closeModal(modalId) {
             var modal = document.getElementById(modalId);
             modal.style.display = "none";
         }
 
-        // モーダル外のクリックで閉じる
         window.onclick = function (event) {
             var modals = document.getElementsByClassName('modal');
             for (var i = 0; i < modals.length; i++) {
@@ -148,9 +136,8 @@
             }
         }
 
-        // ログイン画面に遷移する関数
         function redirectToHome() {
-            window.location.href = "../PostingHome.html"; // 修正された部分
+            window.location.href = "http://localhost/PBI1-B-Humble/KD-infoAppVer01/development/kinjo/php/index.php?change_sort=date"; // ここを修正しました
         }
     </script>
 </body>
