--- a/KD-infoAppVer01/public/pages/Login.html
+++ b/KD-infoAppVer01/public/pages/Login.html
@@ -106,22 +106,18 @@
 
     <!-- ログインモーダル -->
     <div id="loginModal" class="modal">
-        <div class="modal-content">
+        <form action="login.php" method="post" class="modal-content">
             <span class="close" onclick="closeModal('loginModal')">&times;</span>
             <div class="input-field">
                 <label for="username">名前:</label>
-                <input type="text" id="username">
-            </div>
-            <div class="input-field">
-                <label for="email">メールアドレス:</label>
-                <input type="email" id="email">
+                <input type="text" id="username" name="username">
             </div>
             <div class="input-field">
                 <label for="password">パスワード:</label>
-                <input type="password" id="password">
+                <input type="password" id="password" name="password">
             </div>
-            <button class="button" onclick="redirectToHome()">ログイン</button>
-        </div>
+            <button type="submit" class="button">ログイン</button>
+        </form>
     </div>
 
     <script>
