--- a/KD-infoAppVer01/public/pages/Login.html
+++ b/KD-infoAppVer01/public/pages/Login.html
@@ -97,18 +97,16 @@
 
     <!-- ログインモーダル -->
     <div id="loginModal" class="modal">
-        <form action="login.php" method="post" class="modal-content">
+        <div class="modal-content">
             <span class="close" onclick="closeModal('loginModal')">&times;</span>
-            <div class="input-field">
+            <form action="login.php" method="post" class="input-field"> <!-- ログイン情報をlogin.phpに送信 -->
                 <label for="username">名前:</label>
                 <input type="text" id="username" name="username">
-            </div>
-            <div class="input-field">
                 <label for="password">パスワード:</label>
                 <input type="password" id="password" name="password">
-            </div>
-            <button type="submit" class="button">ログイン</button>
-        </form>
+                <button type="submit" class="button">ログイン</button> <!-- ログインボタンがクリックされたら送信 -->
+            </form>
+        </div>
     </div>
 
     <script>
